# blender-2d-lip-sync

./: .gitignore  README.md  README_CN.md  audio.flac  audio.json  example.blend  justfile  main.py  output.txt  phoneme_to_viseme.py  pinyin_to_phoneme.py  pyproject.toml  requirements.txt  rhubarb_map.json  rhubarb_map2.json  viseme_map.json  viseme_map2.json  示例.blend
